# moltrank

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
anchor/: Anchor.toml  check-pair-result.js  find-pair.js  find-votes.js  package-lock.json  package.json  test-smoke.js  test-voting.js  test-voting.ts
anchor/programs/moltrank/: Cargo.toml
anchor/programs/moltrank/src/: error.rs  lib.rs  state.rs
anchor/programs/moltrank/src/instructions/: auto_reveal.rs  commit_vote.rs  commitment_codec.rs  create_market.rs  init_global_pool.rs  init_pair.rs  init_round.rs  manual_reveal.rs  mod.rs  register_identity.rs  settle_pair.rs  subscribe.rs
backend/: build.gradle
backend/config/pmd/: ruleset.xml
config/: commitment-test-vectors.json
db/migrations/: V1__initial_schema.sql
frontend/: .env.local.example  eslint.config.mjs  package-lock.json  package.json
frontend/public/simulation/: results.json
frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/src/components/: battle-view.test.tsx  battle-view.tsx  link-twitter.test.tsx  link-twitter.tsx  navbar.test.tsx  navbar.tsx  pool-sankey.tsx  post-card.tsx  providers.tsx  subscription-banner.tsx
frontend/src/hooks/: use-feed.ts  use-identity.ts
frontend/src/lib/: types.ts  (+4 more)
openclaw/: README.md
scripts/: agent-participation-smoke.sh  clawgic-demo-runner.sh  copy-simulation-results.sh  smoke-clawgic.sh  smoke-endpoints.sh
simulation/: OUTPUT.md  requirements.txt  run.py
simulation/src/: __init__.py  agents.py  charts.py  engine.py  scenarios.py
(+226 files in other folders)
