[package]
name = "moltrank"
version = "0.1.0"
description = "MoltRank ELO-based social media ranking on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moltrank"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
